// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating should render correct size when size is: heading 1`] = `
<Text
  baseline={true}
  heading={true}
  raw={true}
  regular={true}
>
  <ScreenReaderOnly
    component="span"
  >
    3.5
     out of 5
  </ScreenReaderOnly>
  <span
    className="root"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      svgClassName="headingSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      svgClassName="headingSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      svgClassName="headingSvg"
    />
    <Icon
      className="star"
      key="3"
      markup="mock svg"
      svgClassName="headingSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      svgClassName="headingSvg"
    />
  </span>
</Text>
`;

exports[`Rating should render correct size when size is: heading and rating text is shown 1`] = `
<Text
  baseline={true}
  heading={true}
  raw={true}
  regular={true}
>
  <ScreenReaderOnly
    component="span"
  >
    4
     out of 5
  </ScreenReaderOnly>
  <span
    className="root"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      svgClassName="headingSvg scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      svgClassName="headingSvg scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      svgClassName="headingSvg scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="3"
      svgClassName="headingSvg scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      svgClassName="headingSvg scaledDownSvg"
    />
    <span
      className="textRating"
    >
      4
    </span>
  </span>
</Text>
`;

exports[`Rating should render correct size when size is: substandard 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    3.5
     out of 5
  </ScreenReaderOnly>
  <span
    className="root"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      svgClassName="substandardSvg"
    />
    <Icon
      className="star"
      key="3"
      markup="mock svg"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      svgClassName="substandardSvg"
    />
  </span>
</Text>
`;

exports[`Rating should render correct size when size is: substandard and rating text is shown 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    4
     out of 5
  </ScreenReaderOnly>
  <span
    className="root"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      svgClassName="substandardSvg scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      svgClassName="substandardSvg scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      svgClassName="substandardSvg scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="3"
      svgClassName="substandardSvg scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      svgClassName="substandardSvg scaledDownSvg"
    />
    <span
      className="textRating"
    >
      4
    </span>
  </span>
</Text>
`;

exports[`Rating should render correct size when size is: superstandard 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  superstandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    3.5
     out of 5
  </ScreenReaderOnly>
  <span
    className="root"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      svgClassName="superstandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      svgClassName="superstandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      svgClassName="superstandardSvg"
    />
    <Icon
      className="star"
      key="3"
      markup="mock svg"
      svgClassName="superstandardSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      svgClassName="superstandardSvg"
    />
  </span>
</Text>
`;

exports[`Rating should render correct size when size is: superstandard and rating text is shown 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  superstandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    4
     out of 5
  </ScreenReaderOnly>
  <span
    className="root"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      svgClassName="superstandardSvg scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      svgClassName="superstandardSvg scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      svgClassName="superstandardSvg scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="3"
      svgClassName="superstandardSvg scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      svgClassName="superstandardSvg scaledDownSvg"
    />
    <span
      className="textRating"
    >
      4
    </span>
  </span>
</Text>
`;

exports[`Rating should render correct star rating when rating is: 0 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    0
     out of 5
  </ScreenReaderOnly>
  <span
    className="root"
  >
    <StarIcon
      className="star"
      filled={false}
      key="0"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="1"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="2"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="3"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      svgClassName="substandardSvg"
    />
  </span>
</Text>
`;

exports[`Rating should render correct star rating when rating is: 2.74 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    2.74
     out of 5
  </ScreenReaderOnly>
  <span
    className="root"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      svgClassName="substandardSvg"
    />
    <Icon
      className="star"
      key="2"
      markup="mock svg"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="3"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      svgClassName="substandardSvg"
    />
  </span>
</Text>
`;

exports[`Rating should render correct star rating when rating is: 2.75 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    2.75
     out of 5
  </ScreenReaderOnly>
  <span
    className="root"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="3"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      svgClassName="substandardSvg"
    />
  </span>
</Text>
`;

exports[`Rating should render correct star rating when rating is: 3.74 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    3.74
     out of 5
  </ScreenReaderOnly>
  <span
    className="root"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      svgClassName="substandardSvg"
    />
    <Icon
      className="star"
      key="3"
      markup="mock svg"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      svgClassName="substandardSvg"
    />
  </span>
</Text>
`;

exports[`Rating should render correct star rating when rating is: 3.75 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    3.75
     out of 5
  </ScreenReaderOnly>
  <span
    className="root"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="3"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      svgClassName="substandardSvg"
    />
  </span>
</Text>
`;

exports[`Rating should render correct star rating when rating is: 5 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    5
     out of 5
  </ScreenReaderOnly>
  <span
    className="root"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="3"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="4"
      svgClassName="substandardSvg"
    />
  </span>
</Text>
`;

exports[`Rating should render with className 1`] = `
<Text
  baseline={true}
  className="root-class-name"
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    5
     out of 5
  </ScreenReaderOnly>
  <span
    className="root"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="3"
      svgClassName="substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="4"
      svgClassName="substandardSvg"
    />
  </span>
</Text>
`;

exports[`Rating should render with starClassName 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    5
     out of 5
  </ScreenReaderOnly>
  <span
    className="root"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      svgClassName="star-class-name substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      svgClassName="star-class-name substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      svgClassName="star-class-name substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="3"
      svgClassName="star-class-name substandardSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="4"
      svgClassName="star-class-name substandardSvg"
    />
  </span>
</Text>
`;
